crates/toml_edit/tests/snapshots/invalid/datetime/leading-zero-datetime.stderr
TOML parse error at line 2, column 5
  |
2 | d = 02026-05-07T14:15:16Z
  |     ^^^^^^^^^^^^^^^^^^^^^
invalid date, expected a four-digit year (YYYY)
